Edits to Project 9 submission assignment

--- a/Basic_JavaScript_Projects/Project9_countdown_slideshow/index.html
+++ b/Basic_JavaScript_Projects/Project9_countdown_slideshow/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Slideshow Challenge</title>
     <link rel="stylesheet" href="./CSS/main.css" />
-    <script src="./JS/main.js"></script>
+    <script src="./JS/main.js" defer></script>
   </head>
 
   <body>
