--- a/Basic_JavaScript_Projects/React_Projects/React_3.html
+++ b/Basic_JavaScript_Projects/React_Projects/React_3.html
@@ -6,14 +6,21 @@
     <title>My Website</title>
     <script src = "https://unpkg.com/react@16/umd/react.development.js" cross origin></script>
     <script src = "https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src = "https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
 
   <body>
 
+    <div id = 'jsx'></div>
 
-    <script>
+    <script type = "text/babel">
+    class Greeting extends React.Component {
+        render() {
+            return <h1 style = "font-size:8vw;">Hello,World!</h1>
+        }
+    }
 
-
+    ReactDOM.render(<Greeting />, document.getElementById('jsx'))
     </script>
 
   </body>
